C++: fixed highlighting of expressions inside a sizeof() operator.

Task-number: QTCREATORBUG-5129

Change-Id: Ibe0a6a7925a4f0e5b52207079f28a3fa4bb95745
Reviewed-by: Roberto Raggi <roberto.raggi@nokia.com>